--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <div class="flex-container">
       <div class="title"><h1>SketchPad</h1></div>
+      <div class="mode">Mode: Coloring</div>
       <div class="content">
         <div class="board"></div>
         <div class="buttons">
@@ -29,6 +30,7 @@
           />
           <button>Set Size</button>
         </div>
+        <div class="error">Input must be between 2 and 100</div>
       </div>
     </div>
   </body>
